--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .vscode
+package-lock.json
+yarn.lock
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
