--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "test": "jest"
   },
-  "dependencies": {
-    "doctoc": "^1.4.0"
-  },
-  "devDependencies": {
-    "execa": "^4.0.3",
-    "jest": "^26.4.2",
-    "mdmod": "^0.4.0"
-  },
   "main": "lib/index.js",
   "files": [
     "lib"
   ],
+  "dependencies": {
+    "doctoc": "^2.1.0"
+  },
+  "devDependencies": {
+    "execa": "^4.0.3",
+    "jest": "^27.3.1",
+    "mdmod": "^1.0.0"
+  },
+  "homepage": "https://github.com/uetchy/mdmod-plugin-toc",
   "repository": {
     "type": "git",
     "url": "https://github.com/uetchy/mdmod-plugin-toc.git"
@@ -25,9 +26,8 @@
   "bugs": {
     "url": "https://github.com/uetchy/mdmod-plugin-toc/issues"
   },
-  "homepage": "https://github.com/uetchy/mdmod-plugin-toc",
+  "license": "Apache-2.0",
   "keywords": [
     "mdmod"
-  ],
-  "license": "Apache-2.0"
+  ]
 }
